# HeThongNhung

./: README.md  distrobox.ini  docker-compose.yml  main.py  requirements.txt
core/: config.py  vehicle_state.py
firmware/: platformio.ini
firmware/include/: config.h.example
firmware/src/: cam_main.cpp  main.cpp
legacy/: firmware_esp32_main.py  requirements.txt
legacy/api/: app.py  dashboard.py
legacy/autopilot/: engine.py
legacy/broker/: mosquitto.conf
legacy/core/: config.py
legacy/mqtt/: broker_manager.py
simulator/: vehicle_sim.py
src/slam_car_bringup/: CMakeLists.txt  package.xml
src/slam_car_bringup/config/: face_tracker.yaml  nav2_params.yaml  slam_toolbox.yaml
src/slam_car_bringup/launch/: face_tracking.launch.py  navigation.launch.py  robot.launch.py  simulation.launch.py  slam.launch.py
src/slam_car_bringup/maps/: .gitkeep
src/slam_car_bringup/rviz/: default.rviz
src/slam_car_bringup/urdf/: gazebo_plugins.xacro  robot.urdf.xacro
src/slam_car_bringup/worlds/: house.sdf
src/slam_car_interfaces/: CMakeLists.txt  package.xml
src/slam_car_interfaces/msg/: RobotMode.msg
src/slam_car_interfaces/srv/: SetMode.srv
src/slam_car_perception/: package.xml  setup.cfg  setup.py
src/slam_car_perception/slam_car_perception/: __init__.py  cam_bridge_node.py  face_follow_controller.py  face_tracker_node.py
