<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_car_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for SLAM Tracking Car</description>
  <maintainer email="dev@slamcar.local">SLAM Car Dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- SLAM + Navigation -->
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <!-- micro-ROS Agent -->
  <exec_depend>micro_ros_agent</exec_depend>

  <!-- Gazebo Fortress -->
  <exec_depend>ros_gz</exec_depend>

  <!-- Teleop -->
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <!-- Perception (our package) -->
  <exec_depend>slam_car_perception</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
